--- a/templates/add-login.html
+++ b/templates/add-login.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>eBazer - Tailwind CSS eCommerce Admin Template</title>
-    <link rel="shortcut icon" href="{{ url_for('static', filename='admins/img/logo/favicon.png') }}" type="image/x-icon">
+    <title>YDuoDuo-Admin</title>
+    <link rel="shortcut icon" href="{{ url_for('static', filename='assets/images/YDD-logo.png') }}" type="image/x-icon">
 
     <!-- css links -->
     <link rel="stylesheet" href="{{ url_for('static', filename='admins/css/perfect-scrollbar.css') }}">
