--- a/templates/add-product.html
+++ b/templates/add-product.html
@@ -57,7 +57,8 @@
                                     </div>
                                     <div class="mb-5">
                                         <p class="mb-0 text-base text-black">Description</p>
-                                        <textarea class="min-h-[200px]" id="editor" name="description">
+                                        <textarea class="min-h-[200px]" id="editor" name="description"
+                                                  style="width: 100%">
                                         </textarea>
                                     </div>
                                 </div>
