--- a/templates/index.html
+++ b/templates/index.html
@@ -146,32 +146,26 @@
                             <h2>Recommended for You</h2>
                             <p>Below are recommended products based on your likes.</p>
                         </div>
-                        {% for product in products %}
-                            <div class="col-lg-3 col-md-6 col-12 custom-grid IllustAtor all sales women zoomIn" data-wow-duration="2000ms">
-                                <div class="product-single-item" data-product-id="{{ product.id }}" data-in-wishlist="{{ product.in_wishlist }}">
-                                    <div class="image">
-                                        <img src="{{ url_for('static', filename='product_img/' + product.image_url) }}" alt="{{ product.name }}">
-                                        <div class="card-icon">
-                                            <a class="icon" href="wishlist.html">
-                                                <i class="fa fa-heart-o" aria-hidden="true"></i>
-                                            </a>
-                                            <a class="icon-active" href="wishlist.html">
-                                                <i class="fa fa-heart" aria-hidden="true"></i>
-                                            </a>
+                        <div class="row">
+                            {% for product in products %}
+                                <div class="col-xl-4 col-lg-6 col-md-6 col-sm-12 col-12 " data-wow-duration="2000ms">
+                                    <div class="product-single-item " data-product-id="{{ product.id }}" data-in-wishlist="{{ product.in_wishlist }}">
+                                        <div class="image">
+                                            <img src="{{ url_for('static', filename='product_img/' + product.image_url) }}" alt="{{ product.name }}">
+                                            <div class="shop-btn">
+                                                <a class="product-btn" href="{{ url_for('product_detail', product_id=product.id) }}">Shop Now</a>
+                                            </div>
                                         </div>
-                                        <div class="shop-btn">
-                                            <a class="product-btn" href="{{ url_for('product_detail', product_id=product.id) }}">Shop Now</a>
-                                        </div>
-                                    </div>
-                                    <div class="text">
-                                        <h2><a href="product-single.html">{{ product.name }}</a></h2>
-                                        <div class="price">
-                                            <span class="present-price">${{ product.price }}</span>
+                                        <div class="text">
+                                            <h2><a href="product-single.html">{{ product.name }}</a></h2>
+                                            <div class="price">
+                                                <span class="present-price">${{ product.price }}</span>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
-                            </div>
-                        {% endfor %}
+                            {% endfor %}
+                        </div>
                     </div>
                 </div>
             </div>
@@ -199,7 +193,6 @@
             </div>
         </section>
         <!-- end of pengu-banner-section -->
-
 
     </div>
     <!-- end of page-wrapper -->
