--- a/templates/index.html
+++ b/templates/index.html
@@ -122,7 +122,7 @@
                     <div class="col-lg-6 col-12">
                         <div class="offer-right-banner">
                             <div class="images">
-                                <img src="{{ url_for('static', filename='assets/images/offer-img-2.jpg') }}" alt="">
+                                <img src="{{ url_for('static', filename='assets/images/offer-img-2.jpg') }}" alt="g">
                             </div>
                             <div class="offer-text">
                                 <p>Trending Products</p>
