--- a/templates/add-login.html
+++ b/templates/add-login.html
@@ -24,6 +24,8 @@
             <div class="pt-[120px] pb-[120px]">
                 <div class="grid grid-cols-12 shadow-lg bg-white overflow-hidden rounded-md ">
                     <div class="col-span-4 lg:col-span-6 relative h-full hidden lg:block">
+                        <div class="data-bg absolute top-0 left-0 w-full h-full bg-cover bg-no-repeat"
+                             data-bg="../static/admins/img/login-bg.jpg"></div>
                     </div>
                     <div class="col-span-12 lg:col-span-6 md:w-[500px] mx-auto my-auto  pt-[50px] py-[60px] px-5 md:px-[60px]">
                         <div class="text-center">
@@ -38,11 +40,13 @@
                                 <div class="mb-5">
                                     <p class="mb-0 text-base text-black">Username <span class="text-red">*</span></p>
                                     <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base"
+                                           placeholder="Enter your username"
                                            type="text" id="username" name="username" required>
                                 </div>
                                 <div class="mb-5">
                                     <p class="mb-0 text-base text-black">Password <span class="text-red">*</span></p>
                                     <input class="input w-full h-[49px] rounded-md border border-gray6 px-6 text-base"
+                                           placeholder="Enter your password"
                                            type="password" id="password" name="password" required>
                                 </div>
 
