--- a/templates/order.html
+++ b/templates/order.html
@@ -3,6 +3,21 @@
 
     <!-- start page-wrapper -->
     <div class="page-wrapper">
+
+         <!-- start wpo-page-title -->
+        <section class="wpo-page-title">
+            <div class="container">
+                <div class="row">
+                    <div class="col col-xs-12">
+                        <div class="wpo-breadcumb-wrap">
+                            <h2>Order</h2>
+                        </div>
+                    </div>
+                </div> <!-- end row -->
+            </div> <!-- end container -->
+        </section>
+        <!-- end page-title -->
+
         <!-- cart-area start -->
         <div class="cart-area section-padding">
             <div class="container">
