--- a/templates/account-list.html
+++ b/templates/account-list.html
@@ -116,6 +116,20 @@
                                 </tr>
                             </thead>
                             <tbody>
+                                <tr class="bg-white border-b border-gray6 last:border-0 text-start mx-9">
+                                    <td class="px-3 py-3 font-normal text-[#55585B]">
+                                        admin
+                                    </td>
+                                    <td class="px-3 py-3 font-normal text-[#55585B] text-end">
+                                        admin
+                                    </td>
+                                    <td class="px-3 py-3 text-end">
+                                        <span class="text-[11px]  text-success px-3 py-1 rounded-md
+                                        leading-none bg-success/10 font-medium text-end">Active</span>
+                                    </td>
+                                    <td class="px-9 py-3 text-end">
+                                    </td>
+                                </tr>
                                 {% for user in users %}
                                 <tr class="bg-white border-b border-gray6 last:border-0 text-start mx-9">
                                     <td class="px-3 py-3 font-normal text-[#55585B]">
